Project

General

Profile

Bug #53011

fsck/repair uses invalid prefix when removing undecodable Shared Blob

Added by Igor Fedotov over 2 years ago. Updated about 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific, octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues

Copied to bluestore - Backport #53195: pacific: fsck/repair uses invalid prefix when removing undecodable Shared Blob Resolved
Copied to bluestore - Backport #53196: octopus: fsck/repair uses invalid prefix when removing undecodable Shared Blob Resolved

History

#1 Updated by Igor Fedotov over 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 43621

#3 Updated by Neha Ojha over 2 years ago

  • Status changed from Fix Under Review to Pending Backport

#4 Updated by Backport Bot over 2 years ago

  • Copied to Backport #53195: pacific: fsck/repair uses invalid prefix when removing undecodable Shared Blob added

#5 Updated by Backport Bot over 2 years ago

  • Copied to Backport #53196: octopus: fsck/repair uses invalid prefix when removing undecodable Shared Blob added

#6 Updated by Igor Fedotov about 2 years ago

  • Status changed from Pending Backport to Resolved

Also available in: Atom PDF